# expense-reporter-experiment

./: .gitattributes  .gitignore  .~lock.Planilha_BMeFBovespa_Leandro_OrcamentoPessoal-2025.xlsx#  BUG_REPORT.md  BUG_REPORT_DEFAULT_WORKBOOK_PATH.md  CLAUDE.md  DECISIONS_FINALIZED.md  FIXES_APPLIED_Report.md  FIX_SUMMARY.txt  QUICK_FIXES_Summary.txt  README.md  READY_TO_START.txt  USAGE_CALCULATION.md  VERIFICATION_RESULTS.txt  add_category_reference_sheet.py  fix_1_rebuild_reference_sheet.py  fix_3_unmerge_data_columns.py  fix_5_standardize_column_layout.py  review.html  test_installments.csv  verify_ready.ps1  verify_ready.sh
.claude/: advisor-G3-acceptance-design.md  advisor-apply-phase3.md  advisor-phaseB-builder.md  advisor-session24-review.md  doc-audit-2026-06-09.md  handoff-apply-phase3.md  index.md  quick-memory-audit-2026-07-01.md  session-context.md  session-log.md  session42-postmortem.md  settings.local.json  t13-implementation-report.md  tasks.md  workbook-map.md  ws-b-slice3-implementation-report.md
.claude/archive/: pr22-review-findings.md  (+39 more)
.memories/: KNOWLEDGE.md  QUICK.md
docs/: FEEDBACK_SYSTEM.md  expense-classifier-vision.md
expense-reporter/: DOCUMENTATION_INDEX.md  FEATURES_INVESTIGATION_REPORT.md  FEATURE_INVESTIGATION.md  Makefile  PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  README.md  expenses.example.csv  go.mod  go.sum  run-acceptance.sh  test.sh
mcp-server/: pyproject.toml  run-server.sh
mcp-server/.memories/: KNOWLEDGE.md  QUICK.md
mcp-server/src/expense_mcp/: __main__.py  binary.py  server.py
mcp-server/tests/: test_binary.py
(+346 files in other folders)
